Bug: PRD Reviewer: Lynn Comment: fixed the Share dialog so the file name, path wrapped correctly; fixed the share input field so it's next to the label (removed space)

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
@@ -165,7 +165,7 @@
 		.vibe-dataTableComments-bubbleBig         {background: url(images/comments_25_wide.png) no-repeat scroll center center transparent;}
 		.vibe-dataTableComments-bubbleSmall       {background: url(images/comments_25.png)      no-repeat scroll center center transparent;}
 		.vibe-dataTableComments-panel             {text-align: center; display: block;}
-		.vibe-dataTableComments-panel0            {opacity: 0.4; filter: alpha(opacity=40);}
+		.vibe-dataTableComments-panel0            {}
 		.vibe-dataTableCustom-anchor              {}
 		.vibe-dataTableCustom-anchor-label        {}
 		.vibe-dataTableCustom-event               {}
@@ -511,18 +511,36 @@
 		border: 1px solid #B8B8B8;
 		font-weight: normal !important;
 		font-size: 12px;
-		padding: 2px 10px  !important;
+		margin-left: 3px;
+		padding: 2px 5px  !important;
 		text-decoration:none;	
 		white-space: nowrap;
 		text-align: center !important;
-		border-radius: 15px;
-		-moz-border-radius: 15px;
-		-webkit-border-radius: 15px;
+		border-radius: 5px;
+		-moz-border-radius: 5px;
+		-webkit-border-radius: 5px;
 		background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#E0E0E0));
 		background: -moz-linear-gradient(center top , #ffffff, #E0E0E0) repeat scroll 0 0;
 		background: linear-gradient(center top , #ffffff, #E0E0E0) repeat scroll 0 0;
 		background-color: transparent;
 	}
+	
+	.vibe-cmeDlg_BrowseButton:hover {
+		color: #135c8f !important;
+		border: 1px solid #81b2bd;
+		padding: 2px 5px  !important;
+		background: linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
+		background: -o-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
+		background: -moz-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
+		background: linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
+		background: -webkit-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
+		background: -ms-linear-gradient(bottom, #A8D4DD 47%, #D5EDF1 53%, #C8E4E9 100%);
+		background: -webkit-gradient(linear, left bottom, left top, color-stop(0.47, #A8D4DD), color-stop(0.53, #D5EDF1), color-stop(1, #C8E4E9));
+		border-radius: 5px !important;
+		-moz-border-radius: 5px !important;
+		-webkit-border-radius: 5px !important;
+	}
+
 	.vibe-cmeDlg_BrowseImg       {width: 25px; height: 25px; margin: 0 2px 0 0; border: 0px; vertical-align: middle;}
 	.vibe-cmeDlg_Caption1        {display: block !important;}
 	.vibe-cmeDlg_Caption2        {display: block !important;}
@@ -531,7 +549,7 @@
 	.vibe-cmeDlg_DestNone        {margin-left: 3px; color: graytext;}
 	.vibe-cmeDlg_DestLabel       {}
 	.vibe-cmeDlg_DestPanel       {white-space: nowrap; padding-top: 10px;}
-	.vibe-cmeDlg_FindLabel       {}
+	.vibe-cmeDlg_FindLabel       {color: #505354;}
 	.vibe-cmeDlg_FindPanel_Inner {}
 	.vibe-cmeDlg_FindPanel_Outer {padding-top: 15px;}
 	.vibe-cmeDlg_FindWidget      {margin-top: 2px; display: inline;}
